# learn-it-up

./: .gitignore  README.md  TODO  analysis.py  analysis_notebook.py  audio_util.py  evaluation.py  extract_features.py  filter.lua  gen.py  gen.rb  index.md  journal.md  loading.py  main.py  misc_commands.py  model.py  model_notebook.py  models.py  onset_notebook.py  onset_notebook2.py  proposta.md  pyproject.toml  selection_notebook.py  ssc_util.py  style.css  template.html  test_evaluation.py  test_loading.py  test_ssc_util.py
docs/: README.body.html  README.html  index.body.html  index.html  journal.body.html  journal.html  proposta.body.html  proposta.html  style.css
loading/: __init__.py  ppc.py
models/: __init__.py  ppc.py
