[project]
name = "learn-it-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "essentia>=2.1b6.dev1389",
    "msdparser>=2.0.0",
    "tqdm>=4.68.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "marimo>=0.23.9",
    "matplotlib>=3.10.9",
    "python-lsp-server>=1.14.0",
]
