[project]
name = "learn-it-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "essentia>=2.1b6.dev1389",
    "msdparser>=2.0.0",
    "tqdm>=4.67.3",
    "torch>=2.12.0",
    "scipy>=1.17.1",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.124.7",
    "marimo>=0.23.9",
    "matplotlib>=3.10.9",
    "playsound3>=3.3.1",
    "python-lsp-server>=1.14.0",
    "torchvision>=0.27.0",
]
